# LavenderOTP

./: .gitignore  Makefile  README.md  extractor.py  mypy.ini  pyproject.toml
ocr/: models.py  worker.py
proto/v1/: gauth_pb2.py
