[tool.poetry]
name = "lavenderotp"
version = "0.1.0"
description = ""
authors = ["Sergey <64213648+sergerdn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.19.1"
qrcode = "^7.3.1"
image = "^1.5.33"
typer = "^0.4.0"
qrtools = "^0.0.2"
PyQRCode = "^1.2.1"
pyzbar = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
