[tool.poetry]
name = "lavenderotp"
version = "0.1.0"
description = "LavenderOTP extract secret keys from Google Authenticator exported images."
authors = ["Sergey <64213648+sergerdn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.19.1"
qrcode = "^7.3.1"
image = "^1.5.33"
typer = "^0.4.0"
qrtools = "^0.0.2"
PyQRCode = "^1.2.1"
pyzbar = "^0.1.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.11.1"
black = "^21.10b0"
mypy = "^0.910"
types-protobuf = "^3.18.0"

[tool.pylint.format]
max-line-length = 180

[tool.autopep8]
max_line_length = 180
exclude="*_pb2.py"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 180
target-version = ['py38']
exclude = '.+_pb2.py$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
